chore 🚧: Add find all available deliveries
